--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
        im so desperate and lonly this is all i have !! </p>
 
        <div class="fb-like" data-href="https://sise-web-development-environments.github.io/assignment1-Zshoham/"
-        data-width="" data-layout="standard" data-action="like" data-size="small" data-share="true">
+      data-layout="standard" data-action="like" data-size="small" data-share="true">
       </div>
   </div>
 
