fixed deployment link

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="style.css" />
 <title>Shoham Zarfati</title>
 <meta charset="utf-8">
-<meta property="og:url"           content="https://sise-web-development-environments.github.io/assignment1-Zshoham/index.html" />
+<meta property="og:url"           content="https://sise-web-development-environments.github.io/318501418/index.html" />
 <meta property="og:type"          content="website" />
 <meta property="og:title"         content="Shoham Zarfati" />
 <meta property="og:description"   content="Assignment 1 in web dev enviorments" />
@@ -106,7 +106,7 @@
     <p> SOCIAL MEDIA, now this is very important, please give me a like, it would make my day my month and maybe even my year,
        im so desperate and lonly this is all i have !! </p>
 
-       <div class="fb-like" data-href="https://sise-web-development-environments.github.io/assignment1-Zshoham/index.html"
+       <div class="fb-like" data-href="https://sise-web-development-environments.github.io/318501418/index.html"
        data-colorscheme="dark" data-layout="standard" data-action="like" data-size="small" data-share="true">
       </div>
   </div>
